--- a/front-end-2/projeto-frontend/src/components/Header/Header.module.css
+++ b/front-end-2/projeto-frontend/src/components/Header/Header.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   padding: 10px;
-  background: #000;
+  background: var(--background);
   color: #00ffff;
 }
 
