--- a/front-end-2/projeto-frontend/src/components/Card/Card.module.css
+++ b/front-end-2/projeto-frontend/src/components/Card/Card.module.css
@@ -4,5 +4,5 @@
     align-items: center;
     width: 300px;
     border: 2px solid white;
-    margin: auto auto 5px auto;
+    margin: 5px auto 5px auto;
 }
